Remove shadows from thumbnail and fix some spacing

--- a/assets/base.css
+++ b/assets/base.css
@@ -2539,6 +2539,14 @@ details-disclosure > details {
   z-index: -1;
 }
 
+.global-media-settings--no-shadow {
+  overflow: hidden !important;
+}
+
+.global-media-settings--no-shadow:after {
+  content: none;
+}
+
 .global-media-settings img,
 .global-media-settings iframe,
 .global-media-settings model-viewer,
