--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -24,6 +24,9 @@ slider-component {
     scroll-padding-left: 1rem;
     -webkit-overflow-scrolling: touch;
     margin-bottom: 1rem;
+  }
+
+  .slider--mobile.product__media-list {
     padding-top: calc(var(--shadow-vertical-offset) * -1 + var(--shadow-blur-radius));
     padding-bottom: calc(var(--shadow-vertical-offset) + var(--shadow-blur-radius));
   }
