--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -26,6 +26,10 @@
     z-index: 2;
   }
 
+  .product--thumbnail .thumbnail-list {
+    padding-right: var(--media-shadow-horizontal-offset);
+  }
+
   .product__info-wrapper {
     padding-left: 5rem;
   }
@@ -463,7 +467,6 @@ a.product__text {
 }
 
 @media screen and (min-width: 750px) {
-
   .product--thumbnail .product__media-list,
   .product--thumbnail_slider .product__media-list {
     padding-bottom: var(--media-shadow-vertical-offset);
@@ -537,8 +540,8 @@ a.product__text {
   height: 3rem;
   width: 3rem;
   position: absolute;
-  left: 1.5rem;
-  top: 1.5rem;
+  left: calc( 0.4rem + var(--media-border-width));
+  top: calc(0.4rem + var(--media-border-width));
   z-index: 1;
   transition: color var(--duration-short) ease,
     opacity var(--duration-short) ease;
@@ -1010,16 +1013,18 @@ a.product__text {
   color: rgb(var(--color-base-text));
   cursor: pointer;
   background-color: transparent;
-  border: 0.1rem solid rgba(var(--color-foreground),.04);
-  border-radius: var(--media-radius);
 }
 
 .thumbnail:hover {
   opacity: 0.7;
 }
 
+.thumbnail.global-media-settings img {
+  border-radius: 0;
+}
+
 .thumbnail[aria-current] {
-  border: 0.1rem solid rgb(var(--color-base-text));
+  border-width: calc(0.1rem + var(--media-border-width));
 }
 
 .thumbnail img {
